# stargz-rs

./: CLAUDE.md  Cargo.toml  README.md  test_performance.sh
src/: lib.rs  main.rs  sectionreader.rs
